--- a/fr/css/style.css
+++ b/fr/css/style.css
@@ -319,6 +319,7 @@ header ul li:hover {
   flex-direction: column;
   align-items: center;
   flex: 1;
+  text-align:center;
 }
 .stat-text p:nth-child(odd) {
   color: var(--dark-red);
