--- a/fr/css/style.css
+++ b/fr/css/style.css
@@ -73,7 +73,6 @@ strong {
   background-color: var(--dark-red);
 }
 
-
 /* HEADER */
 header {
   position: fixed;
@@ -509,7 +508,7 @@ header ul li:hover {
 
 .tel img,
 .email img {
-  max-width: 9%;
+  max-width: 8%;
   height: auto;
 }
 /* END OF CONTACT */
@@ -547,10 +546,10 @@ header ul li:hover {
   /* CONTACT  */
   .tel img,
   .email img {
-  max-width: 9%;
-  height: auto;
-}
-/* END OF CONTACT */
+    max-width: 7%;
+    height: auto;
+  }
+  /* END OF CONTACT */
 }
 
 @media screen and (min-width: 450px) {
@@ -571,7 +570,6 @@ header ul li:hover {
     }
   }
   /* END OF HERO */
-
 }
 @media screen and (min-width: 460px) {
   .stat-image {
@@ -580,6 +578,15 @@ header ul li:hover {
   }
 }
 
+@media screen and (min-width: 500px) {
+  /* CONTACT  */
+  .tel img,
+  .email img {
+    max-width: 5%;
+    height: auto;
+  }
+  /* END OF CONTACT */
+}
 
 @media screen and (min-width: 576px) {
   html {
@@ -623,7 +630,7 @@ header ul li:hover {
   }
 
   .stat img {
-    max-width:65%;
+    max-width: 65%;
     height: auto;
   }
   .stat-text {
@@ -694,7 +701,6 @@ header ul li:hover {
 
   .fr-numbers {
     padding-inline: 15%;
-
   }
 
   /* END OF FR NUMBERS */
@@ -913,6 +919,11 @@ header ul li:hover {
     flex-direction: row;
     justify-content: space-around;
   }
+  .tel img,
+  .email img {
+    max-width: 9%;
+    height: auto;
+  }
   /* END OF CONTACT  */
 }
 
@@ -950,8 +961,6 @@ header ul li:hover {
     max-width: 70%;
   }
   /* END OF HERO */
-
-
 
   /* PRODUCTS */
   .cards-grid {
@@ -1079,7 +1088,7 @@ header ul li:hover {
   .fr-numbers h4 {
     text-align: center;
   }
-  
+
   .fr-numbers h4 {
     letter-spacing: 0.4px;
     font-size: 1.1rem;
@@ -1283,11 +1292,11 @@ header ul li:hover {
 }
 
 @media screen and (min-width: 1380px) {
-   /* PACKAGING TYPES */
-   .packaging-types {
+  /* PACKAGING TYPES */
+  .packaging-types {
     gap: 5rem;
   }
-} 
+}
 
 @media screen and (min-width: 1440px) {
   /* HERO */
@@ -1366,8 +1375,4 @@ header ul li:hover {
 }
 
 @media screen and (min-width: 1800px) {
-
-
-
 }
-
