--- a/css/style.css
+++ b/css/style.css
@@ -1311,16 +1311,19 @@ header ul li:hover {
 
   /* CONTACT */
   #contact {
-    padding-inline: 15%;
+    padding-inline: 20%;
   }
   #contact > p:nth-child(2) {
     max-width: 70ch;
     margin: auto;
   }
-
+  .contact-info {
+    max-width: 80%;
+    margin: auto;
+  }
   .tel img,
   .email img {
-    max-width: 10%;
+    max-width: 7%;
     height: auto;
   }
 
@@ -1357,7 +1360,11 @@ header ul li:hover {
     gap: 3rem;
   }
   /* END OF PACKAGING */
+
 }
+
+
+  /* END OF CONTACT  */
 
 @media screen and (min-width: 1600px) {
   /* HERO */
@@ -1388,7 +1395,6 @@ header ul li:hover {
   .tel,
   .email {
     display: flex;
-    justify-content: flex-start;
     gap: 1rem;
     align-items: center;
   }
